crates/mdbook-rustdoc-links/tests/multi_stage_some_failed/stderr/data.txt
 WARN mdbook-rustdoc-links: `cargo check` did not succeed

Caused by:
    0: --- rustc errors
       error[E0308]: mismatched types
        --> src/lib.rs:6:5
         |
       5 | pub fn arm64_only() {
         |                    - help: try adding a return type: `-> i32`
       6 |     42
         |     ^^ expected `()`, found integer
       
       For more information about this error, try `rustc --explain E0308`.
    1: --- cargo stderr
       [LLVM_COV_STDERR]
       error: could not compile `multi_stage_some_failed` (lib) due to 1 previous error
    2: command exited with exit status: 101
    3: command: cd "[TEST_DIR]/multi_stage_some_failed" && "cargo" "check" "--message-format" "json" "--target" "aarch64-unknown-linux-gnu" "--config" "term.color = 'never'" "--config" "term.progress.when = 'never'"
       
 WARN mdbook-rustdoc-links: build #1 has failed
 WARN mdbook-rustdoc-links: some builds have failed
warning: unresolved link to `crate::arm64_only`
 --> index.md:2:5
  |
2 | - [`crate::arm64_only`]
  |     ^^^^^^^^^^^^^^^^^ no item named `arm64_only` in module `temporary_crate_0`
  |
  = note: in order to resolve links, the preprocessor creates a temporary crate;
          the following prelude has been implicitly added to the temporary crate:
          `use multi_stage_some_failed::*;`

 WARN mdbook-rustdoc-links: finished with warnings
